--- a/Report.Rmd
+++ b/Report.Rmd
@@ -12,7 +12,7 @@ output:
 - Year
 - Budget 
 - Linear Regression 
-- Title 
+- Rating 
 
 ## Abstract
 
@@ -54,7 +54,6 @@ moviesx <-movies[c('title', 'year', 'length', 'budget','rating','votes') ]
 moviesfiltered <- filter(moviesx, votes > (quantile(movies$votes, .5)))
 #Filtering the dataset so that it only contains films released after the year 1950
 moviesfilteredx <- filter(moviesfiltered, year > 1950)
-
 ```
 
 In this report, I will be using the ‘ggplot2movies’ dataset. The data is collected from the website https://www.imdb.com — a website dedicated to collecting information about various films, television shows, and celebrities. Users are able to complete reviews on the IMDB website allowing them to provide a score for a film on a scale from 1-10. 
@@ -73,24 +72,31 @@ A large part of this report will use rating as a dependant variable and rating i
 
 When observing a histogram based on year of release, we can see that the dataset is severely left-skewed:
 
+### Figure 1 
 ```{r echo = FALSE}
-hist(movies$year)
+#creating histogram of films based on year they were released
+hist(movies$year, main = "Histogram of Film Years", xlab= "Year of Film Release")
 ```
 
 Despite the fact that it is left skewed, there is still a large number of films that are released before 1950; the dataset actually contains 10,418 entries from films before 1950. Films from before 1950 are different from the films that we are used to seeing in today's age in many different ways. Reviewers may have focused on stylistic traits, rather than both stylistic and narrative traits like  today's movies; movies were also much shorter. Due to the unfair critical comparisons between the films from different eras, I decided to focus exclusively on films released after 1950's as they conform to the style we are used to seeing in modern films. Therefore, I removed all films from the year 1950 and below. 
 
 The dataset also contains an outlier for the variable 'length'. Below, I will plot a scatterplot of length and reception.  
 
+### Figure 2
 ```{r echo = FALSE}
-plot(rating~length,data=moviesfilteredx )
+#Showing what the scatterplot between rating and length looks like without removing outlier
+plot(rating~length,data=moviesfilteredx , main = "Film Length vs. Rating", xlab = "Length of Film", ylab = "Rating of Film")
 ```
 
 
 After observing the scatterplot showing the relationship between reception and length, it is clear that we have an outlier (a film titled 'A Cure for Insomnia' that is over 5000 minutes long — fitting title). Below, I will display what the data looks like without the outlier. 
 
+### Figure 3
 ```{r echo= FALSE}
+#filtering dataset so that it does not include outlier
 movieswithoutcureforinsomnia <- filter(moviesfilteredx, length < 3000)
-plot(rating~length,data=movieswithoutcureforinsomnia )
+#Showing what the scatterplot betweem rating and length looks like without the outlier
+plot(rating~length,data=movieswithoutcureforinsomnia , main = "Film Length vs. Rating", xlab = "Length of Film", ylab = "Rating of Film")
 ```
 
 
@@ -98,7 +104,9 @@ Removing the outlier pertaining to the film 'A Cure for Insomnia' ensures that w
 
 To understand what the dataset looks like, I will display the first few rows of our dataset:
 
+### Table 1
 ```{r echo = FALSE}
+#Code to show first few rows of data
 head(moviesfilteredx)
 ```
 
@@ -144,30 +152,32 @@ I will first look at how a film's budget affects the reception of a film
 
 In order to determine the relationship between the dependant variable (reception) and the independant variable (budget), I will run a linear regression. Because many of the entries in our dataset don't contain information about the film's budget, I will remove those values when performing the linear regression; this means that the linear regression between budget and reception will only inspect entries with a budget greater than 0. 
 
+### Figure 4
 ```{r echo= FALSE}
-#Scatterplot of rating and budget 
-
 #Remove entries that have a value of NA or 0 for budget 
 budgetfiltered <- filter(moviesfilteredx, budget > 0)
-#Plot graph
-plot(rating~budget,data=budgetfiltered ) 
+#Scatterplot of rating and budget 
+plot(rating~budget,data=budgetfiltered  , main = "Film Budget vs. Rating", xlab = "Budget of Film", ylab = "Rating of Film") 
 ```
 
 Looking at the data as a scatterplot, there seems to be slight positive relationship between the 2 variables.  
 
-To further examine the relationship, I will run a linear regression between the two variablesto determine whether the relationship is significant. The results of the linear regression can be seen below: 
+To further examine the relationship, I will run a linear regression between the two variables to determine whether the relationship is significant. The results of the linear regression can be seen below: 
 
+### Figure 5 
 ```{r echo = FALSE}
-#Many rows of our data do not contain a budget, so I will remove those rows 
-
+#Creating a variable for the linear regression 
 linregbudget <- lm(rating~budget, data=budgetfiltered)
 
-plot(rating~budget,data=budgetfiltered ) 
+#plotting graph with visualization of linear regression  
+plot(rating~budget,data=budgetfiltered , main = "Film Budget vs. Rating", xlab = "Budget of Film", ylab = "Rating of Film") 
 abline(linregbudget, col="red")
+```
 
+### Table 2
+```{r echo = FALSE}
+#Summary statistics for linear regression 
 summary(linregbudget)
-
-#Judging by the high p-value, we can conclude that a films budget does not affect its reception among the audience. 
 ```
 Judging by the linear regression summary, we can conclude that there is a meaningful relationship between the dependant variable, rating, and the independant variable, budget. This is due to the fact that the p-value (2e-16) is significantly smaller than the significance level of 0.05 we are using in this report. 
 
@@ -177,20 +187,27 @@ Next, I will be looking at how a film's length affects the reception of a film.
 
 In order to determine the relationship between the dependant variable (reception) and the independant variable (length), I will run a linear regression, but first I will visualize the data with a scatterplot. 
 
-```{r}
-plot(rating~length,data=movieswithoutcureforinsomnia )
+### Figure 6
+```{r echo = FALSE}
+#Scatterplot of rating and length 
+plot(rating~length,data=movieswithoutcureforinsomnia, main = "Film Length vs. Rating", xlab = "Length of Film (in minutes)", ylab = "Rating of Film") 
 ```
 
 Although there is a large cluster on the left side of the graph, there does seem to be a slight positive relationship that indicates  a longer length results in a better film rating. To confirm this, we can look at the summary statistics for the linear regression. 
 
+### Figure 7 
 ```{r echo = FALSE}
-#Linear regression between rating and length
+#Variable for linear regression between rating and length
 linreglength <- lm(rating~length, data=movieswithoutcureforinsomnia)
-#Summary statistics for linear regression
 
-plot(rating~length,data=movieswithoutcureforinsomnia )
+#Visualizing scatterplot with linear regression overlayed
+plot(rating~length,data=movieswithoutcureforinsomnia, main = "Film Length vs. Rating", xlab = "Length of Film (in minutes)", ylab = "Rating of Film") 
 abline(linreglength, col="red")
+```
 
+### Table 3
+```{r echo = FALSE}
+#Summary statistics for linear regression
 summary(linreglength)
 ```
 
@@ -202,28 +219,35 @@ Last, we will look at how the year a film's released affects it's reception.
 
 To begin, we will visualize the data with a scatterplot to identify whether we can see a relationship. 
 
+### Figure 8
 ```{r echo = FALSE}
-plot(rating~year,data=moviesfilteredx )
+#Scatterplot of rating and year 
+plot(rating~year,data=moviesfilteredx, main = "Year of Release vs. Rating", xlab = "Year of Release", ylab = "Rating of Film") 
 ```
 
 Judging by the scatterplot, there doesn't seem to be an obvious relationship between the two variables. 
 
 We can accurately identify whether there is a relationship by examining the linear regression between the two variables. 
 
+### Figure 9
 ```{r echo = FALSE}
+#Variable for linear regression between length and year 
 linregyear <- lm(rating~year, data=moviesfilteredx)
 
-plot(rating~year,data=moviesfilteredx )
+#Visualizing scatterplot with linear regression overlayed
+plot(rating~year,data=moviesfilteredx , main = "Year of Release vs. Rating", xlab = "Year of Release", ylab = "Rating of Film") 
 abline(linregyear, col="red")
+```
 
+### Table 4
+```{r echo = FALSE}
+#Summary statistics for linear regression
 summary(linregyear)
-
 ```
 
 Surprisingly, there is a strong negative relationship. By observing the graph, I thought that there wasn't a significant relationship as I didn't see any blatant positive or negative relationship. But the slightly negative slope with a p-value much smaller than 0.05 indicates that there is a negative relationship between year and reception.  
 
 ------------------------------------------------------------------------------------------------------------
-
 
 ## Discussion 
 
@@ -256,8 +280,157 @@ There are many additional steps that can be taken for a better analysis. For one
 
 ## Appendix/References
 
-Show all lines of code and extranneous graphs
+### Code 
 
-MAKE SURE TO CITE THE R PACKAGE AND R
+Below you will also find the R code used in this analysis: 
+
+#### Preamble; Setting up libraries and filtering the dataset 
+```{r include = TRUE, echo=TRUE}
+knitr::opts_chunk$set(echo = FALSE)
+# Setting up libraries
+library(ggplot2movies)
+library(ggplot2)
+library(dplyr)
+
+# Adding the variable decade based on the variables years 
+movies <- mutate(movies, decade = ifelse(year %in% 1950:1959, "1950s",
+                                        ifelse(year %in% 1960:1969, "1960s",
+                                        ifelse(year %in% 1970:1979, "1970s",
+                                        ifelse(year %in% 1980:1989, "1980s",
+                                        ifelse(year %in% 1990:1999, "1990s",
+                                        ifelse(year %in% 2000:2009, "2000s", "<1949")))))))
+
+
+#Filtering the dataset so that it only contains relevant variables
+moviesx <-movies[c('title', 'year', 'length', 'budget','rating','votes') ]
+#Filtering the dataset so that it only contains films that contain a certain amount of votes. Specifically, above the 50th percentile which is 30
+moviesfiltered <- filter(moviesx, votes > (quantile(movies$votes, .5)))
+#Filtering the dataset so that it only contains films released after the year 1950
+moviesfilteredx <- filter(moviesfiltered, year > 1950)
+```
+
+
+### Figure 1 
+```{r, echo=TRUE, results = "hide", warning= FALSE}
+#creating histogram of films based on year they were released
+hist(movies$year, main = "Histogram of Film Years", xlab= "Year of Film Release")
+```
+
+### Figure 2
+```{r, echo=TRUE, results = "hide", warning= FALSE}
+#Showing what the scatterplot between rating and length looks like without removing outlier
+plot(rating~length,data=moviesfilteredx , main = "Film Length vs. Rating", xlab = "Length of Film", ylab = "Rating of Film")
+```
+
+### Figure 3
+```{r, echo=TRUE, results = "hide", warning= FALSE}
+#filtering dataset so that it does not include outlier
+movieswithoutcureforinsomnia <- filter(moviesfilteredx, length < 3000)
+#Showing what the scatterplot betweem rating and length looks like without the outlier
+plot(rating~length,data=movieswithoutcureforinsomnia , main = "Film Length vs. Rating", xlab = "Length of Film", ylab = "Rating of Film")
+```
+
+### Table 1
+```{r, echo=TRUE, results = "hide", warning= FALSE}
+#Code to show first few rows of data
+head(moviesfilteredx)
+```
+
+### Figure 4
+```{r, echo=TRUE, results = "hide", warning= FALSE}
+#Remove entries that have a value of NA or 0 for budget 
+budgetfiltered <- filter(moviesfilteredx, budget > 0)
+#Scatterplot of rating and budget 
+plot(rating~budget,data=budgetfiltered  , main = "Film Budget vs. Rating", xlab = "Budget of Film", ylab = "Rating of Film") 
+```
+
+### Figure 5 
+```{r, echo=TRUE, results = "hide", warning= FALSE}
+#Creating a variable for the linear regression 
+linregbudget <- lm(rating~budget, data=budgetfiltered)
+
+#plotting graph with visualization of linear regression  
+plot(rating~budget,data=budgetfiltered , main = "Film Budget vs. Rating", xlab = "Budget of Film", ylab = "Rating of Film") 
+abline(linregbudget, col="red")
+```
+
+### Table 2
+```{r, echo=TRUE, results = "hide", warning= FALSE}
+#Summary statistics for linear regression 
+summary(linregbudget)
+```
+
+### Figure 6
+```{r, echo=TRUE, results = "hide", warning= FALSE}
+#Scatterplot of rating and length 
+plot(rating~length,data=movieswithoutcureforinsomnia, main = "Film Length vs. Rating", xlab = "Length of Film (in minutes)", ylab = "Rating of Film") 
+```
+
+### Figure 7 
+```{r, echo=TRUE, results = "hide", warning= FALSE}
+#Variable for linear regression between rating and length
+linreglength <- lm(rating~length, data=movieswithoutcureforinsomnia)
+
+#Visualizing scatterplot with linear regression overlayed
+plot(rating~length,data=movieswithoutcureforinsomnia, main = "Film Length vs. Rating", xlab = "Length of Film (in minutes)", ylab = "Rating of Film") 
+abline(linreglength, col="red")
+```
+
+### Table 3
+```{r, echo=TRUE, results = "hide", warning= FALSE}
+#Summary statistics for linear regression
+summary(linreglength)
+```
+
+### Figure 8
+```{r, echo=TRUE, results = "hide", warning= FALSE}
+#Scatterplot of rating and year 
+plot(rating~year,data=moviesfilteredx, main = "Year of Release vs. Rating", xlab = "Year of Release", ylab = "Rating of Film") 
+```
+
+### Figure 9
+```{r, echo=TRUE, results = "hide", warning= FALSE}
+#Variable for linear regression between length and year 
+linregyear <- lm(rating~year, data=moviesfilteredx)
+
+#Visualizing scatterplot with linear regression overlayed
+plot(rating~year,data=moviesfilteredx , main = "Year of Release vs. Rating", xlab = "Year of Release", ylab = "Rating of Film") 
+abline(linregyear, col="red")
+```
+
+### Table 4
+```{r, echo=TRUE, results = "hide", warning= FALSE}
+#Summary statistics for linear regression
+summary(linregyear)
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+### References 
+
+- Hadley Wickham. ggplot2: Elegant Graphics for Data Analysis. Springer-Verlag New York, 2016. [ggplot2]
+- Hadley Wickham, Romain François, Lionel Henry and Kirill Müller (2020). dplyr: A Grammar of Data Manipulation. R package version 1.0.2. https://CRAN.R-project.org/package=dplyr [dplyr]
+- Hadley Wickham (2015). ggplot2movies: Movies Data. R package version 0.0.1. [ggplot2movies]       https://CRAN.R-project.org/package=ggplot2movies
+- R Core Team (2013). R: A language and environment for statistical computing. R Foundation for Statistical Computing, Vienna, Austria. URL http://www.R-project.org/. [R]
+
+
 
 
